--- a/config/package.json
+++ b/config/package.json
@@ -30,6 +30,7 @@
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-spec-reporter": "0.0.19",
     "karma": "^0.12.37",
-    "gulp-karma": "0.0.4"
+    "gulp-karma": "0.0.4",
+    "merge-stream": "^0.1.8"
   }
 }
